--- a/ExcelAddInEquipmentDatabase/app.config
+++ b/ExcelAddInEquipmentDatabase/app.config
@@ -1,30 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="ExcelAddInEquipmentDatabase.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-        </sectionGroup>
-    </configSections>
-    <connectionStrings>
-        <add name="ExcelAddInEquipmentDatabase.Properties.Settings.GADATAConnectionString"
-            connectionString="Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Persist Security Info=True;User ID=EqUiAdmin;Password=EqUiAdmin"
-            providerName="System.Data.SqlClient" />
-        <add name="ExcelAddInEquipmentDatabase.Properties.Settings.GadataConnRW"
-            connectionString="Data Source=sqla001.gen.volvocars.net;Persist Security Info=True;User ID=EqUiAdmin;Password=EqUiAdmin" />
-    </connectionStrings>
-    <userSettings>
-        <ExcelAddInEquipmentDatabase.Properties.Settings>
-            <setting name="activeuser" serializeAs="String">
-                <value>"sdebeul"</value>
-            </setting>
-            <setting name="userlevel" serializeAs="String">
-                <value>100</value>
-            </setting>
-            <setting name="usergroup" serializeAs="String">
-                <value>"AAOSR"</value>
-            </setting>
-        </ExcelAddInEquipmentDatabase.Properties.Settings>
-    </userSettings>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="ExcelAddInEquipmentDatabase.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
+  <connectionStrings>
+    <add name="ExcelAddInEquipmentDatabase.Properties.Settings.GADATAConnectionString"
+      connectionString="Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Persist Security Info=True;User ID=EqUiAdmin;Password=EqUiAdmin"
+      providerName="System.Data.SqlClient" />
+    <add name="ExcelAddInEquipmentDatabase.Properties.Settings.GadataConnRW"
+      connectionString="Data Source=sqla001.gen.volvocars.net;Persist Security Info=True;User ID=EqUiAdmin;Password=EqUiAdmin" />
+    <add name="GADATAUserRoleProvider" connectionString="metadata=res://*/UserManagment.csdl|res://*/UserManagment.ssdl|res://*/UserManagment.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sqla001.gen.volvocars.net;initial catalog=GADATA;persist security info=True;user id=EqUiAdmin;password=EqUiAdmin;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+      providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -33,4 +24,24 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
+  <userSettings>
+    <ExcelAddInEquipmentDatabase.Properties.Settings>
+      <setting name="IsPowerUser" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="IsRobotgroup" serializeAs="String">
+        <value>False</value>
+      </setting>
+    </ExcelAddInEquipmentDatabase.Properties.Settings>
+  </userSettings>
 </configuration>
