--- a/EqUiWebUi/EqUiWebUi.csproj
+++ b/EqUiWebUi/EqUiWebUi.csproj
@@ -156,7 +156,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Areas\Alert\Views\Shared\" />
-    <Folder Include="Areas\Gadata\Models\" />
     <Folder Include="Areas\Maximo_ui\Views\Shared\" />
   </ItemGroup>
   <ItemGroup>
@@ -211,9 +210,37 @@
       <DependentUpon>AlertModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Areas\Alert\SmsComm.cs" />
+    <Compile Include="Areas\Gadata\BackgroundWork.cs" />
     <Compile Include="Areas\Gadata\Controllers\TableController.cs" />
     <Compile Include="Areas\Gadata\GadataAreaRegistration.cs" />
     <Compile Include="Areas\Gadata\DataRefreshHub.cs" />
+    <Compile Include="Areas\Gadata\Models\AAOSR_PloegRaport_Result.cs">
+      <DependentUpon>Gadata.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Areas\Gadata\Models\Bodytracking.cs">
+      <DependentUpon>Gadata.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Areas\Gadata\Models\EQpluginDefaultNGAC_Result.cs">
+      <DependentUpon>Gadata.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Areas\Gadata\Models\Gadata.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Gadata.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Areas\Gadata\Models\Gadata.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Gadata.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Areas\Gadata\Models\Gadata.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Gadata.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Areas\Gadata\Models\Supervisie.cs">
+      <DependentUpon>Gadata.tt</DependentUpon>
+    </Compile>
     <Compile Include="Areas\Maximo_ui\Controllers\MaximoController.cs" />
     <Compile Include="Areas\Maximo_ui\Controllers\WorkorderController.cs" />
     <Compile Include="Areas\Maximo_ui\Controllers\WorkorderDetailsController.cs" />
@@ -281,19 +308,7 @@
     <Compile Include="Controllers\SharepointController.cs" />
     <Compile Include="Controllers\SpcController.cs" />
     <Compile Include="Controllers\TableauController.cs" />
-    <Compile Include="Models\AAOSR_PloegRaport_Result.cs">
-      <DependentUpon>GadataDatamodel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\Bodytracking.cs">
-      <DependentUpon>GadataDatamodel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\Breakdown.cs">
-      <DependentUpon>GadataDatamodel.tt</DependentUpon>
-    </Compile>
     <Compile Include="Models\c_querySnapshots.cs">
-      <DependentUpon>GadataDatamodel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\EQpluginDefaultNGAC_Result.cs">
       <DependentUpon>GadataDatamodel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\gadataModel.cs" />
@@ -307,9 +322,6 @@
       <DependentUpon>GadataDatamodel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\l_querySnapshots.cs">
-      <DependentUpon>GadataDatamodel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\Supervisie.cs">
       <DependentUpon>GadataDatamodel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\TipMonitor.cs">
@@ -362,6 +374,16 @@
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>AlertModel.edmx</DependentUpon>
       <LastGenOutput>AlertModel.cs</LastGenOutput>
+    </Content>
+    <Content Include="Areas\Gadata\Models\Gadata.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Gadata.edmx</DependentUpon>
+      <LastGenOutput>Gadata.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Areas\Gadata\Models\Gadata.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Gadata.edmx</DependentUpon>
+      <LastGenOutput>Gadata.cs</LastGenOutput>
     </Content>
     <Content Include="Areas\PlcSupervisie\Models\Gadata.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
@@ -714,6 +736,13 @@
     <Content Include="Areas\Gadata\Views\Table\_loginfo.cshtml" />
     <Content Include="Areas\Gadata\Views\Table\Loginfo.cshtml" />
     <Content Include="Areas\Alert\Views\Alert\AAOSRAlertList.cshtml" />
+    <EntityDeploy Include="Areas\Gadata\Models\Gadata.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>Gadata.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="Areas\Gadata\Models\Gadata.edmx.diagram">
+      <DependentUpon>Gadata.edmx</DependentUpon>
+    </Content>
     <None Include="fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="MvcGrid\fonts\glyphicons-halflings-regular.eot" />
     <Content Include="MvcGrid\fonts\glyphicons-halflings-regular.svg" />
