--- a/EqUiWebUi/EqUiWebUi.csproj
+++ b/EqUiWebUi/EqUiWebUi.csproj
@@ -171,7 +171,9 @@
     <Compile Include="Areas\Alert\Controllers\c_SMSconfigController.cs" />
     <Compile Include="Areas\Alert\Controllers\c_smsSystemController.cs" />
     <Compile Include="Areas\Alert\Controllers\c_triggersController.cs" />
+    <Compile Include="Areas\Alert\Controllers\GunCylindereferncesController.cs" />
     <Compile Include="Areas\Alert\Controllers\h_alertController.cs" />
+    <Compile Include="Areas\Alert\Controllers\SBCUreferncesController.cs" />
     <Compile Include="Areas\Alert\Models\AlertMetadata.cs" />
     <Compile Include="Areas\Alert\Models\AlertModel.Context.cs">
       <AutoGen>True</AutoGen>
@@ -188,6 +190,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>AlertModel.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Areas\Alert\Models\c_controller.cs">
+      <DependentUpon>AlertModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Areas\Alert\Models\c_CPT600.cs">
       <DependentUpon>AlertModel.tt</DependentUpon>
     </Compile>
@@ -203,10 +208,16 @@
     <Compile Include="Areas\Alert\Models\c_triggers.cs">
       <DependentUpon>AlertModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Areas\Alert\Models\GunCylinderefernce.cs">
+      <DependentUpon>AlertModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Areas\Alert\Models\h_alert.cs">
       <DependentUpon>AlertModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Areas\Alert\Models\L_users.cs">
+      <DependentUpon>AlertModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Areas\Alert\Models\SBCUrefernce.cs">
       <DependentUpon>AlertModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Areas\Alert\SmsComm.cs" />
@@ -691,7 +702,6 @@
     <Content Include="Areas\Alert\Views\web.config" />
     <EntityDeploy Include="Areas\Alert\Models\AlertModel.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>AlertModel.Designer.cs</LastGenOutput>
     </EntityDeploy>
     <Content Include="Areas\Alert\Models\AlertModel.edmx.diagram">
       <DependentUpon>AlertModel.edmx</DependentUpon>
@@ -742,6 +752,18 @@
     <Content Include="Areas\Gadata\Models\Gadata.edmx.diagram">
       <DependentUpon>Gadata.edmx</DependentUpon>
     </Content>
+    <Content Include="Areas\Alert\Views\GunCylinderefernces\Create.cshtml" />
+    <Content Include="Areas\Alert\Views\GunCylinderefernces\Delete.cshtml" />
+    <Content Include="Areas\Alert\Views\GunCylinderefernces\Details.cshtml" />
+    <Content Include="Areas\Alert\Views\GunCylinderefernces\Edit.cshtml" />
+    <Content Include="Areas\Alert\Views\GunCylinderefernces\Index.cshtml" />
+    <Content Include="Areas\Alert\Views\SBCUrefernces\Create.cshtml" />
+    <Content Include="Areas\Alert\Views\SBCUrefernces\Delete.cshtml" />
+    <Content Include="Areas\Alert\Views\SBCUrefernces\Details.cshtml" />
+    <Content Include="Areas\Alert\Views\SBCUrefernces\Edit.cshtml" />
+    <Content Include="Areas\Alert\Views\SBCUrefernces\Index.cshtml" />
+    <Content Include="Areas\Alert\Views\Alert\AASPOTIndex.cshtml" />
+    <Content Include="Areas\Alert\Views\Alert\Index.cshtml" />
     <None Include="fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="MvcGrid\fonts\glyphicons-halflings-regular.eot" />
     <Content Include="MvcGrid\fonts\glyphicons-halflings-regular.svg" />
